# bid-evaluation-assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.production.yml  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: ci.yml
app/: __init__.py  constraint_extractor.py  cost_gates.py  document_parser.py  errors.py  evaluation_nodes.py  langgraph_runtime.py  lightrag_service.py  llm_provider.py  main.py  mcp_a2a.py  mineru_official_api.py  mineru_parse_service.py  mock_llm.py  object_storage.py  parse_utils.py  parser_adapters.py  performance_benchmark.py  performance_gates.py  quality_gates.py  queue_backend.py  ragas_evaluator.py  reranker.py  runtime_profile.py  schemas.py  security.py  security_gates.py  security_scan.py  sql_whitelist.py  store.py  store_admin.py  store_backends.py  store_eval.py  store_ops.py  store_parse.py  store_release.py  store_retrieval.py  store_workflow.py  token_budget.py  tools_registry.py  (+1 more)
app/db/: __init__.py  postgres.py  rls.py
app/ops/: __init__.py  backend_consistency.py  backend_rollback.py  security_drill.py  slo_probe.py
app/repositories/: __init__.py  audit_logs.py  dlq_items.py  documents.py  evaluation_reports.py  jobs.py  parse_manifests.py  projects.py  rule_packs.py  suppliers.py  workflow_checkpoints.py
app/routes/: _deps.py  admin.py  documents.py  evaluations.py  internal.py  retrieval.py
deploy/: .env.production.template  prometheus.yml
docs/: SYSTEM_STATUS.md
docs/datasets/: eval-dataset-governance.md  eval-dataset-schema.json
docs/design/: 2026-02-21-agent-development-lifecycle.md  2026-02-21-agent-evals-observability.md  2026-02-21-agent-tool-governance.md  2026-02-21-api-contract-test-samples.md  2026-02-21-data-model-and-storage-spec.md  2026-02-21-database-schema-design.md  2026-02-21-deployment-config.md  2026-02-21-error-handling-and-dlq-spec.md  2026-02-21-error-handling.md  2026-02-21-frontend-design.md  2026-02-21-frontend-interaction-spec.md  2026-02-21-gate-a-boundary-and-side-effect-matrix.md  2026-02-21-openapi-v1.yaml  (+20 more)
frontend/: README.md  index.html  package-lock.json  package.json
research/: Agentic_NLP课程启示录.md  GitHub项目价值分析与借鉴策略.md  MinerU_API_JSON处理_技术实现指南.md  README.md  全流程技术栈选型指南_2026最佳实践.md  医疗器械招投标评标分析_AgenticRAG建议文档_v2.md  医疗器械招投标评标系统_调研报告.md  可解释AI_XAI_在智能评标中的应用.md  招投标智能辅助评标最新实践与政策动态.md  智能评标系统技术实现补充指南.md  系统设计方案_MinerU_AgenticRAG.md  辅助评标专家系统_GitHub项目参考.md  辅助评标专家系统_参考文献清单.md  辅助评标专家系统_文献综述.md  辅助评标专家系统_调研报告.md
scripts/: apply_postgres_rls.py  benchmark_performance.py  compare_store_backends.py  eval_ragas.py  freeze_dataset_version.py  generate_jwt_keys.py  import_real_pdf.py  import_real_pdf_direct.py  reindex_document.py  rollback_to_sqlite.py  run_slo_probe.py  run_worker.py  security_compliance_drill.py  security_secret_scan.py  setup_minio_worm.sh  validate_dataset.py
tests/: conftest.py  test_api_contract_core.py  test_audit_integrity_api.py  test_audit_repository.py  test_backend_consistency_ops.py  test_backend_rollback_ops.py  test_constraint_extractor.py  test_cost_budget.py  test_dlq_repository.py  test_document_parser.py  test_documents_read_endpoints.py  test_documents_repository.py  test_e2e_api_scenarios.py  test_end_to_end_real_parsing.py  test_evaluation_audit_logs.py  test_evaluation_nodes.py  test_evaluation_report.py  test_evaluation_report_repository_sync_in_store.py  test_evaluation_reports_repository.py  test_gate_c_end_to_end.py  test_gate_d_other_gates.py  test_gate_e_rollout_and_rollback.py  test_gate_f_ops_optimization.py  test_health.py  test_idempotency.py  test_internal_job_run.py  test_internal_outbox_queue_api.py  test_internal_replay_api.py  test_job_cancel.py  test_job_state_machine.py  test_jobs_list.py  test_jobs_repository.py  test_jwt_authentication.py  test_legal_hold_api.py  test_llm_provider.py  test_mcp_a2a.py  test_mineru_official_api.py  test_mineru_official_api_adapter.py  test_mineru_parse_service.py  test_mineru_real_persistence.py  (+44 more)
(+74 files in other folders)
