[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bid-evaluation-assistant"
version = "0.1.0"
description = "Gate C minimal API skeleton for bid evaluation assistant"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "jsonschema>=4.22.0,<5.0.0",
  "langgraph>=0.2.0,<1.0.0",
  "pyjwt>=2.9.0,<3.0.0",
  "cryptography>=43.0.0,<44.0.0",
  "chromadb>=0.5.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0,<10.0.0",
  "httpx>=0.28.0,<1.0.0",
]
postgres = [
  "psycopg[binary]>=3.2.0,<4.0.0",
]
redis = [
  "redis>=5.0.0,<6.0.0",
]
s3 = [
  "boto3>=1.34.0,<2.0.0",
]
lightrag = [
  "sentence-transformers>=2.7.0,<3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
